--- a/package.json
+++ b/package.json
@@ -1,53 +1,150 @@
 {
   
   "name": "jayanth",
+  
   "version": "0.1.0",
+  
   "private": true,
- 
+  
   "dependencies": {
-    "@craco/craco": "^6.2.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-intl": "^5.20.6",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "react-slick": "^0.28.1",
-    "slick-carousel": "^1.8.1",
-    "web-vitals": "^1.0.1"
+  
+    
+  "@craco/craco": "^6.2.0",
+  
+    
+  "@testing-library/jest-dom": "^5.11.4",
+  
+    
+  "@testing-library/react": "^11.1.0",
+  
+    
+  "@testing-library/user-event": "^12.1.10",
+  
+    
+  "react": "^17.0.2",
+  
+    
+  "react-dom": "^17.0.2",
+  
+    
+  "react-icons": "^4.2.0",
+  
+    
+  "react-intl": "^5.20.6",
+  
+    
+  "react-router-dom": "^5.2.0",
+  
+    
+  "react-scripts": "4.0.3",
+  
+    
+  "react-slick": "^0.28.1",
+  
+    
+  "react-social-icons": "^5.5.1",
+  
+    
+  "slick-carousel": "^1.8.1",
+  
+    
+  "web-vitals": "^1.0.1"
+  
   },
+  
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy":"gh-pages-d build"
+  
+    
+  "start": "craco start",
+  
+    
+  "build": "craco build",
+  
+    
+  "test": "craco test",
+  
+    
+  "eject": "react-scripts eject",
+  
+    
+  "predeploy": "npm run build",
+  
+    
+  "deploy": "gh-pages-d build"
+  
   },
+  
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  
+    
+  "extends": [
+  
+    
+    
+  "react-app",
+  
+    
+    
+  "react-app/jest"
+  
+    
+  ]
+  
   },
+  
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  
+    
+  "production": [
+  
+    
+    
+  ">0.2%",
+  
+    
+    
+  "not dead",
+  
+    
+    
+  "not op_mini all"
+  
+    
+  ],
+  
+    
+  "development": [
+  
+    
+    
+  "last 1 chrome version",
+  
+    
+    
+  "last 1 firefox version",
+  
+    
+    
+  "last 1 safari version"
+  
+    
+  ]
+  
   },
+  
   "devDependencies": {
-    "autoprefixer": "^9.8.6",
-    "gh-pages": "^3.2.3",
-    "postcss": "^7.0.36",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.4"
+  
+    
+  "autoprefixer": "^9.8.6",
+  
+    
+  "gh-pages": "^3.2.3",
+  
+    
+  "postcss": "^7.0.36",
+  
+    
+  "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.4"
+  
   }
 }
